# PetScraper

./: .env-sample  .gitignore  README.md  bypass.ipynb  docker-compose.yaml  main.py  main_dev.py  main_scrap.py  pyproject.toml  requirements.txt  shops.txt
links/: zooplus.txt
pet_products_scraper/: __init__.py  _asda.py  _bernpetfoods.py  _bitiba_etl.py  _burnspet.py  _directvet_etl.py  _farmandpetplace.py  _fishkeeper_etl.py  _harringtons.py  _healthypetstore.py  _jollyes_etl.py  _lilyskitchen_etl.py  _naturesmenu.py  _ocado.py  _orijen.py  _pet_products_etl.py  _petdrugsonline_etl.py  _petplanet_etl.py  _petsathome_etl.py  _petscorner.py  _petshop.py  _petshoponline.py  _petsupermarket_etl.py  _purina_etl.py  _taylorpetfoods.py  _thenaturalpetstore.py  _thepetexpress.py  _therange.py  _vetshop.py  _vetuk.py  _viovet_etl.py  _zooplus_etl.py  image.py  scraper.py  utils.py
sql/: create_table.sql  init.sql  insert_into_pet_product_variant_prices.sql  insert_into_pet_product_variants.sql  insert_into_pet_products.sql  insert_into_urls.sql  select_unscraped_urls.sql
