[project]
name = "petscraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.2",
    "isort>=6.0.0",
    "pymysql>=1.1.1",
    "requests>=2.32.3",
    "ruff>=0.9.4",
    "selenium>=4.28.1",
    "tenacity>=9.0.0",
    "undetected-chromedriver>=3.5.5",
]
